reemplaza index.html y corrigeerror de respuesta en el alert de post usuario

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       const data = await response.json(); // Convierto la respuesta a Json
       // Muestra la respuesta en un alert
       //console.log(data);
-      alert("Respuesta del servidor: " + data.msg); // Muestro data en el alert
+      alert("Respuesta del servidor: " + data); // Muestro data en el alert
       //limpia los inputs del formulario
       $("form:first input:first").val("");
       $("form:first input:nth-child(2)").val("");
